[package]
name = "roguelike-server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio.workspace = true
netcode.workspace = true
serde.workspace = true
endlessgrid.workspace = true
tiled.workspace = true
slotmap.workspace = true
uuid.workspace = true
env_logger.workspace = true
log.workspace = true
glam.workspace = true